<package>
  <name>p2os_launch</name>
  <version>2.0.7</version>
  <description>Launch and config files designed for use with the p2os stack.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/p2os-purdue</url>

  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>

  <author email="hunter@openrobotics.org">Hunter L. Allen</author>
  <author email="dfseifer@usc.edu">David Feil-Seifer</author>
  <author>Brian Gerkey</author>
  <author>Kasper Stoy</author>
  <author>Richard Vaughan</author>
  <author>Andrew Howard</author>
  <author>Tucker Hermans</author>
  <author>ActivMedia Robotics LLC</author>
  <author>MobileRobots Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
