<?xml version="1.0"?>
<package>
  <name>p2os_msgs</name>
  <version>2.0.4</version>
  <description>
    Defines the messages that are used to communicate with the
    p2os_driver package and the ROS infrastructure.
  </description>

  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/p2os_msgs</url>
  <url type="bugtracker">https://github.com/allenh1/p2os/issues/</url>
  <url type="repository">https://github.com/allenh1/p2os/</url>

  
  <author email="allen286@purdue.edu">Hunter Allen</author>
  <author email="dfseifer@usc.edu">David Feil-Seifer</author>
  <author email="asynodin@mech.upatras.gr">Aris Synodinos</author>
  <author>Brian Gerkey</author>
  <author>Kasper Stoy</author>
  <author>Richard Vaughan</author>
  <author>Andrew Howard</author>
  <author>Tucker Hermans</author>
  <author>ActivMedia Robotics LLC</author>
  <author>MobileRobots Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>