<package>
  <name>p2os_teleop</name>
  <version>2.0.0</version>
  <description>A teleoperation node for the p2os_driver package.</description>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/p2os-purdue</url>
  <url type="bugtracker">https://github.com/allenh1/p2os/issues</url>

  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>

  <author email="allen286@purdue.edu">Hunter Allen</author>
  <author email="dfseifer@usc.edu">David Feil-Seifer</author>
  <author>Brian Gerkey</author>
  <author>Kasper Stoy</author>
  <author>Richard Vaughan</author>
  <author>Andrew Howard</author>
  <author>Tucker Hermans</author>
  <author>ActivMedia Robotics LLC</author>
  <author>MobileRobots Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
